<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.NotificationFragment">

    <!-- TODO: Update blank fragment layout -->
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image1"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:src="@drawable/girl_first"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFF"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_toRightOf="@+id/profile_image1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:paddingStart="10sp"
            android:textSize="15sp"
            android:paddingEnd="10sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/congratulate_nisha_sharma_for_17_years_at_ibm"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginStart="5sp"
            android:textSize="18sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/theme_text"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:background="@drawable/bg_parent_rounded_corner_blue"
            android:text="@string/say_congrats"/>
    </LinearLayout>

</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/line_background"
        android:layout_height="1sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image2"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:src="@drawable/man_second"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/profile_image2"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:paddingStart="10sp"
                android:textSize="15sp"
                android:paddingEnd="10sp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/satish_kumar_gupta_viewed_your_profile"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginStart="5sp"
                android:textSize="18sp"
                android:layout_marginTop="10sp"
                android:textColor="@color/theme_text"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:background="@drawable/bg_parent_rounded_corner_blue"
                android:text="SEE ALL VIEWS"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>