<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E9EC"
    tools:context=".Fragments.ConnectionsFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="40sp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/card1"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/feed_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/feed_item_margin"
                android:layout_marginRight="@dimen/feed_item_margin"
                android:layout_marginTop="@dimen/feed_item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="vertical"
                android:paddingBottom="@dimen/feed_item_padding_top_bottom"
                android:paddingTop="@dimen/feed_item_padding_top_bottom" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/feed_item_padding_left_right"
                    android:paddingRight="@dimen/feed_item_padding_left_right" >

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/man_first"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FFFF"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/feed_item_profile_info_padd" >

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="fill_parent"
                            android:text="Tim Cook Cherry"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/feed_item_profile_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/timestamp"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="22 hours ago"
                            android:textColor="@color/timestamp"
                            android:textSize="@dimen/feed_item_timestamp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtStatusMsg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/discovery"
                    android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                    android:paddingRight="@dimen/feed_item_status_pad_left_right"
                    android:paddingTop="@dimen/feed_item_status_pad_top" />

                <TextView
                    android:id="@+id/txtUrl"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:linksClickable="true"
                    android:text="https://www.google.co.in"
                    android:paddingBottom="10dp"
                    android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                    android:paddingRight="@dimen/feed_item_status_pad_left_right"
                    android:textColorLink="@color/link" />

                <ImageView
                    android:id="@+id/feedImage1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/event_first"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/card2"
        android:layout_below="@+id/card1"
        android:paddingTop="10sp"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/feed_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:layout_marginLeft="@dimen/feed_item_margin"
                android:layout_marginRight="@dimen/feed_item_margin"
                android:layout_marginTop="@dimen/feed_item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="vertical"
                android:paddingBottom="@dimen/feed_item_padding_top_bottom"
                android:paddingTop="@dimen/feed_item_padding_top_bottom" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/feed_item_padding_left_right"
                    android:paddingRight="@dimen/feed_item_padding_left_right" >

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image2"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/man_second"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FFF"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/feed_item_profile_info_padd" >

                        <TextView
                            android:id="@+id/name2"
                            android:layout_width="fill_parent"
                            android:text="Bob Shawn Terry"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/feed_item_profile_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/timestamp2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="1 day ago"
                            android:textColor="@color/timestamp"
                            android:textSize="@dimen/feed_item_timestamp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtStatusMsg2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/description"
                    android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                    android:paddingRight="@dimen/feed_item_status_pad_left_right"
                    android:paddingTop="@dimen/feed_item_status_pad_top" />

                <TextView
                    android:id="@+id/txtUrl2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:linksClickable="true"
                    android:text="https://www.apple.co.in"
                    android:paddingBottom="10dp"
                    android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                    android:paddingRight="@dimen/feed_item_status_pad_left_right"
                    android:textColorLink="@color/link" />

                <ImageView
                    android:id="@+id/feedImage12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/event_second"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@+id/card2"
        android:paddingTop="10sp"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/feed_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:layout_marginLeft="@dimen/feed_item_margin"
                android:layout_marginRight="@dimen/feed_item_margin"
                android:layout_marginTop="@dimen/feed_item_margin"
                android:background="@drawable/bg_parent_rounded_corner"
                android:orientation="vertical"
                android:paddingBottom="@dimen/feed_item_padding_top_bottom"
                android:paddingTop="@dimen/feed_item_padding_top_bottom" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/feed_item_padding_left_right"
                    android:paddingRight="@dimen/feed_item_padding_left_right" >

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image3"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/intel_logo"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FFF"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/feed_item_profile_info_padd" >

                        <TextView
                            android:id="@+id/name3"
                            android:layout_width="fill_parent"
                            android:text="Intel Corporation"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/feed_item_profile_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/timestamp3"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="2 day ago"
                            android:textColor="@color/timestamp"
                            android:textSize="@dimen/feed_item_timestamp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtStatusMsg3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/intel_description"
                    android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                    android:paddingRight="@dimen/feed_item_status_pad_left_right"
                    android:paddingTop="@dimen/feed_item_status_pad_top" />

                <TextView
                    android:id="@+id/txtUrl3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:linksClickable="true"
                    android:text="https://www.intel.co.in"
                    android:paddingBottom="10dp"
                    android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                    android:paddingRight="@dimen/feed_item_status_pad_left_right"
                    android:textColorLink="@color/link" />

                <ImageView
                    android:id="@+id/feedImage13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/intel_image"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
</ScrollView>